[project]
name = "davstarship"
version = "0.1.0"
description = "Jeu Pygame de vaisseau spatial avec astéroïdes et pièces."
requires-python = ">=3.11"
dependencies = ["pygame>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
davstarship = "davstarship.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
